@@ -1,7 +1,8 @@
 2.72 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Add separate class for handling second stage of firmware update process.
+- Add logic to determine if device is in firmware update on connect (receiving a FC0).
 
 
 2.71 (2018-08-19)
